# Doc_engine

./: .dockerignore  .gitignore  Dockerfile  README  docker-compose.yml  nginx.conf  test-server.js
cpp-core/: CMakeLists.txt  converter.cpp  pdf_converter
db/: custom.db
prisma/: schema.prisma
src/app/: page.tsx
src/app/api/download/[jobId]/: route.ts
src/app/api/jobs/[jobId]/: route.ts
src/app/api/process/: route.ts
src/app/api/upload/: route.ts
src/components/: document-converter.tsx
src/lib/: document-service.ts
